--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/main_background_color"/>
             <corners android:radius="16dp" />
-            <stroke android:width="1dp" android:color="@color/seperator_color" />
+            <stroke android:width="1dp" android:color="@color/separator_color" />
         </shape>
     </item>
 
