--- a/app/src/main/res/layout/finished_game_single_item.xml
+++ b/app/src/main/res/layout/finished_game_single_item.xml
@@ -2,7 +2,6 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="10dp"
@@ -36,9 +35,9 @@
             app:layout_constraintTop_toBottomOf="@+id/player1Name" />
 
         <View
-            android:id="@+id/vertical_seperator"
-            style="@style/VerticalSeperatorStyle"
-            app:layout_constraintBottom_toTopOf="@+id/horizontal_seperator"
+            android:id="@+id/playerColumnSeparator"
+            style="@style/VerticalSeparatorStyle"
+            app:layout_constraintBottom_toTopOf="@+id/playerRowSeparator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -63,24 +62,24 @@
             app:layout_constraintTop_toBottomOf="@+id/player2Name" />
 
         <View
-            android:id="@+id/horizontal_seperator"
-            style="@style/HorizontalSeperatorStyle"
+            android:id="@+id/playerRowSeparator"
+            style="@style/HorizontalSeparatorStyle"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/vertical_seperator"
-            tools:layout_editor_absoluteY="80dp" />
+            app:layout_constraintTop_toBottomOf="@+id/playerColumnSeparator" />
 
         <ImageView
             android:id="@+id/imageView3"
             style="@style/PlayerImageViewStyle"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator"
+            app:layout_constraintTop_toBottomOf="@+id/playerRowSeparator"
             android:contentDescription="@string/todo"/>
 
         <TextView
             android:id="@+id/player3Name"
             style="@style/NameTextViewStyle"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator" />
+            app:layout_constraintTop_toBottomOf="@+id/playerRowSeparator" />
 
         <TextView
             android:id="@+id/player3TotalScore"
@@ -89,24 +88,24 @@
             app:layout_constraintTop_toBottomOf="@+id/player3Name" />
 
         <View
-            android:id="@+id/vertical_seperator2"
-            style="@style/VerticalSeperatorStyle"
+            android:id="@+id/playerColumnSeparator2"
+            style="@style/VerticalSeparatorStyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator" />
+            app:layout_constraintTop_toBottomOf="@+id/playerRowSeparator" />
 
         <ImageView
             android:id="@+id/imageView4"
             style="@style/PlayerImageViewStyle"
             android:contentDescription="@string/todo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator" />
+            app:layout_constraintTop_toBottomOf="@+id/playerRowSeparator" />
 
         <TextView
             android:id="@+id/player4Name"
             style="@style/NameTextViewStyle"
             app:layout_constraintEnd_toStartOf="@+id/imageView4"
-            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator" />
+            app:layout_constraintTop_toBottomOf="@+id/playerRowSeparator" />
 
         <TextView
             android:id="@+id/player4TotalScore"
@@ -115,25 +114,27 @@
             app:layout_constraintTop_toBottomOf="@+id/player4Name" />
 
         <View
-            android:id="@+id/horizontal_seperator2"
-            style="@style/HorizontalSeperatorStyle"
+            android:id="@+id/playerAndDetailRowSeparator"
+            style="@style/HorizontalSeparatorStyle"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/vertical_seperator2" />
+            app:layout_constraintTop_toBottomOf="@+id/playerColumnSeparator2" />
 
         <TextView
             android:id="@+id/gameInfo"
             style="@style/InfoTextViewStyle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator2" />
+            app:layout_constraintTop_toBottomOf="@+id/playerAndDetailRowSeparator" />
 
         <TextView
             android:id="@+id/gameDate"
             style="@style/DateTextViewStyle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.25"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gameInfo" />
+            app:layout_constraintTop_toBottomOf="@+id/gameInfo"
+            app:layout_constraintVertical_bias="0.333" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
