--- a/app/src/main/res/layout/fragment_finished_game_view.xml
+++ b/app/src/main/res/layout/fragment_finished_game_view.xml
@@ -46,7 +46,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
         android:padding="10dp"
@@ -62,7 +61,7 @@
             android:contentDescription="@string/app_name"
             android:tooltipText="@string/partner"
             android:padding="4dp"
-            android:src="@drawable/ic_partner_person"
+            android:src="@drawable/ic_partner"
             android:visibility="gone"
             app:backgroundTint="@color/fab_background_color"
             app:tint="@color/button_text_color" />
@@ -74,7 +73,6 @@
             android:textColor="@color/fab_text_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabSingle"
