--- a/app/src/main/res/layout/fragment_save_partner_game.xml
+++ b/app/src/main/res/layout/fragment_save_partner_game.xml
@@ -2,137 +2,168 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/scrollView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/main_background_color"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="8dp">
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/team1NameEntryHint"
+            style="@style/SingleGameTextInputLayoutStyle"
+            android:gravity="top"
+            android:layout_marginTop="8dp"
+            android:hint="@string/enter_team1_name"
+            app:boxStrokeColor="@color/score_hint_text_color"
+            app:counterEnabled="true"
+            app:counterMaxLength="20"
+            app:counterTextColor="@color/score_hint_text_color"
+            app:errorEnabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/team1NameEntry"
+                style="@style/SingleGameTextInputEditTextStyle"
+                android:inputType="text"
+                android:maxLength="21" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/team2NameEntryHint"
+            style="@style/SingleGameTextInputLayoutStyle"
+            android:hint="@string/enter_team2_name"
+            app:boxStrokeColor="@color/score_hint_text_color"
+            app:counterEnabled="true"
+            app:counterMaxLength="20"
+            app:counterTextColor="@color/score_hint_text_color"
+            app:errorEnabled="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/team1NameEntryHint">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/team2NameEntry"
+                style="@style/SingleGameTextInputEditTextStyle"
+                android:inputType="text"
+                android:maxLength="21" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <Button
+            android:id="@+id/confirmNames"
+            style="@style/SingleGameButtonStyle"
+            android:layout_gravity="end"
+            android:text="@string/save_names"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/team2NameEntryHint" />
+
         <TextView
             android:id="@+id/playerNameTitle"
-            android:text="@string/teamNamesAndScoresTitle"
             style="@style/TitleTextViewStyle"
-            android:visibility="gone"
-            android:layout_marginTop="20dp"/>
+            android:text="@string/teamNamesAndScoresTitle"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/confirmNames" />
 
-        <LinearLayout
-            android:id="@+id/nameEntryLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/team1Name"
+            style="@style/NameTextInputLayoutStyle"
+            android:visibility="invisible"
+            android:backgroundTint="@color/main_background_color"
+            android:background="@color/main_background_color"
+            app:boxStrokeColor="@android:color/transparent"
+            app:boxStrokeWidth="1dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/scoreColumnSeparator"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/playerNameTitle">
 
-            <com.google.android.material.textfield.TextInputLayout
-                    style="@style/SingleGameTextInputLayoutStyle"
-                android:hint="@string/enter_team1_name"
-                app:counterEnabled="true"
-                app:counterMaxLength="20"
-                android:gravity="top"
-                app:errorEnabled="true">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/team1TotalScore"
+                style="@style/ScoreTextInputEditTextStyle"
+                android:focusable="false"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/team1NameEntry"
-                    android:maxLength="21"
-                    android:inputType="text"
-                    style="@style/SingleGameTextInputEditTextStyle" />
-            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/SingleGameTextInputLayoutStyle"
-                android:hint="@string/enter_team2_name"
-                app:counterEnabled="true"
-                app:counterMaxLength="20"
-                app:errorEnabled="true">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/team2NameEntry"
-                    android:maxLength="21"
-                    android:inputType="text"
-                    style="@style/SingleGameTextInputEditTextStyle" />
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
+        <View
+            android:id="@+id/scoreColumnSeparator"
+            style="@style/VerticalSeparatorStyle"
+            app:layout_constraintEnd_toStartOf="@id/team2Name"
+            android:layout_margin="8dp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toEndOf="@id/team1Name"
+            app:layout_constraintTop_toBottomOf="@+id/playerNameTitle" />
 
-        <LinearLayout
-            android:visibility="gone"
-            android:id="@+id/playerLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_margin="8dp">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/team1Name"
-                style="@style/NameTextInputLayoutStyle">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/team1TotalScore"
-                    style="@style/ScoreTextInputEditTextStyle"/>
-            </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/team2Name"
+            style="@style/NameTextInputLayoutStyle"
+            android:visibility="invisible"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/scoreColumnSeparator"
+            app:layout_constraintTop_toBottomOf="@+id/playerNameTitle">
 
-             <include layout="@layout/vertical_seperator" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/team2TotalScore"
+                style="@style/ScoreTextInputEditTextStyle"
+                android:focusable="false"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/team2Name"
-                style="@style/NameTextInputLayoutStyle">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/team2TotalScore"
-                    style="@style/ScoreTextInputEditTextStyle"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_marginTop="20dp"
-            android:id="@+id/seperator"
-            android:visibility="gone"
-            android:background="@color/seperator_color"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+        <View
+            android:id="@+id/roundsAndTitleSeparator"
+            style="@style/HorizontalSeparatorStyle"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/team1Name"/>
 
         <TextView
             android:id="@+id/roundScoreTitle"
-            android:text="@string/team_round_scores"
             style="@style/TitleTextViewStyle"
-            android:visibility="gone"
-            android:layout_marginTop="20dp"/>
+            android:text="@string/team_round_scores"
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@id/roundsAndTitleSeparator"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <LinearLayout
             android:id="@+id/scoreLayout"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_margin="8dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@id/roundScoreTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
         </LinearLayout>
 
         <Button
-            android:id="@+id/confirmNames"
-            android:text="@string/save_names"
+            android:id="@+id/saveGame"
             style="@style/SingleGameButtonStyle"
-            android:visibility="visible"
-            android:layout_gravity="end" />
+            android:text="@string/save"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@+id/scoreLayout"
+            app:layout_constraintTop_toBottomOf="@id/scoreLayout" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="end">
-            <Button
-                android:id="@+id/newRound"
-                android:text="@string/new_round"
-                style="@style/SingleGameButtonStyle"/>
-            <Button
-                android:id="@+id/saveGame"
-                android:text="@string/save"
-                style="@style/SingleGameButtonStyle"/>
-        </LinearLayout>
-    </LinearLayout>
+        <Button
+            android:id="@+id/newRound"
+            style="@style/SingleGameButtonStyle"
+            android:text="@string/new_round"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toStartOf="@+id/saveGame"
+            app:layout_constraintTop_toBottomOf="@+id/scoreLayout" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </ScrollView>
-
