--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="date_text_color">#FF6200EE</color>
     <color name="info_text_color">#FF6200EE</color>
     <color name="name_text_color">#FF6200EE</color>
-    <color name="seperator_color">#45494A</color>
+    <color name="separator_color">#45494A</color>
     <color name="fab_text_color">#45494A</color>
     <color name="fab_background_color">#FF6200EE</color>
     <color name="title_text_color">#45494A</color>
